--- a/_config.yml
+++ b/_config.yml
@@ -40,20 +40,20 @@ footer:
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: twitter
-    url: http://twitter.com/jekyllrb
+    url: http://twitter.com/weathermakerco
   - title: facebook
-    url:
+    url: https://www.facebook.com/dustin.armstrong.11.11
   - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
+    url: http://stackoverflow.com/questions/tagged/weathermaker
   - title: bitbucket
-    url: http://bitbucket.org/jekyll
+    url: http://bitbucket.org/weathermaker
   - title: github
-    url: http://github.com/jekyll
+    url: http://github.com/weathermaker
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: 3481 Melrose Place
-  - line: Beverly Hills, CA 90210
+  - line: 2469 W 1000 S
+  - line: Williamsburg, IN 47393
 
 # Credits content
 credits: 'Freelancer is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.'
