--- a/_config.yml
+++ b/_config.yml
@@ -1,68 +1,45 @@
-# Site settings
 title: Freelancer
 email: zebesquawz@gmail.com
-url: http://dustinarmstrong.info
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
-keywords: "your keywords, separated by commas"
-skills: "Web Developer - Graphic Artist - Systems Administrator"
+url: 'http://dustinarmstrong.info'
+description: >-
+  Write an awesome description for your new site here. You can edit this line in
+  _config.yml. It will appear in your document head meta (for Google search
+  results) and in your feed.xml site description.
+keywords: 'your keywords, separated by commas'
+skills: Web Developer - Graphic Artist - Systems Administrator
 meta_author: LastName FirstName
-
-# Google webmaster tools
-google_verify:
-
-# https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
-bing_verify:
-
-# Contact form:
-# - static : pass through formspree.io to validate email sending
-# - disqus : replace contact form by disqus thread
-# - comment the line below if you want to stick with the default PHP contact form
+google_verify: null
+bing_verify: null
 contact: static
-
-# If you use disqus you need disqus shortname
-# https://help.disqus.com/customer/portal/articles/466208
 disqus_shortname: myshortname
-
-# Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: 18bc9c #80B3FF
-  primary-rgb: "24,288,156" #"128,179,255"
-  secondary: 2c3e50 #FD6E8A
-  secondary-dark: 233140 #A2122F
-
-# Footer settings
+  primary: 18bc9c
+  primary-rgb: '24,288,156'
+  secondary: 2c3e50
+  secondary-dark: 233140
 footer:
   copyright: Dr. Henry Jekyll
   location: Location
   social: Around the Web
   credits: Credits
-
-# Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: twitter
-    url: http://twitter.com/weathermakerco
+    url: 'http://twitter.com/weathermakerco'
   - title: facebook
-    url: https://www.facebook.com/dustin.armstrong.11.11
+    url: 'https://www.facebook.com/dustin.armstrong.11.11'
   - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/weathermaker
+    url: 'http://stackoverflow.com/questions/tagged/weathermaker'
   - title: bitbucket
-    url: http://bitbucket.org/weathermaker
+    url: 'http://bitbucket.org/weathermaker'
   - title: github
-    url: http://github.com/weathermaker
-
-# Postal address (add as many lines as necessary)
+    url: 'http://github.com/weathermaker'
 address:
   - line: 2469 W 1000 S
-  - line: Williamsburg, IN 47393
-
-# Credits content
-credits: 'Freelancer is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.'
-
-# Build settings
+  - line: 'Williamsburg, IN 47393'
+credits: >-
+  Freelancer is a free to use, open source Bootstrap theme created by <a
+  href="http://startbootstrap.com">Start Bootstrap</a>.
 markdown: kramdown
 permalink: pretty
-
-# This will require each of these plugins automatically.
 plugins:
   - jekyll-admin
-
